# opportune

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARK_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_BACKLOG.md  LICENSE  MAINTAINING.md  MANIFEST.in  ONBOARDING_IMPROVEMENT_PLAN.md  PILOT_TEST_PLAN.md  PUBLIC_RELEASE.md  README.md  RELEASE_NOTES.md  RELEASE_SCORECARD.md  ROADMAP.md  SECURITY.md  SOURCE_QUALITY_SPEC.md  SUPPORT.md  VERSION_1_AUDIT.md  VERSION_1_PLAN.md  candidate_profile.yaml  config.example.yaml  config.py  desktop_launcher.py  jobhunt.py  pilot_metrics.py  profile_context.py  public_ops.py  pyproject.toml  source_registry.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
adapters/: __init__.py  adzuna_adapter.py  apify_adapter.py  apify_fallback_adapter.py  ashby_adapter.py  builtin_adapter.py  github_lists_adapter.py  greenhouse_adapter.py  indeed_rss_adapter.py  job_api_adapter.py  jsearch_adapter.py  lever_adapter.py  serpapi_adapter.py  wellfound_adapter.py  workable_adapter.py  ycombinator_adapter.py
benchmarks/: __init__.py  report.py  validate.py
core/: __init__.py  dedupe.py  freshness.py  http.py  job_description.py  link_check.py  location_normalization.py  paths.py  skill_extractor.py  skill_matcher.py  source_health.py  source_quality.py  source_registry.py  temporal_scorer.py  update_check.py
dashapi/: server.py
dashboard/: __init__.py  db.py  migrations.py
data/: skill_taxonomy.yaml
docs/: FUTURE_EMAIL_EVIDENCE_OUTREACH.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
onboarding/: __init__.py  compiler.py  providers.py  questions.py  resume_reader.py  sanitizer.py  service.py  store.py
pipeline/: __init__.py  ats_discovery.py  discovery_pool.py  funnel.py  query_strategy.py  scheduler.py  scrape.py  smart_scrape.py
profile/: availability.yaml  skills.example.yaml
ranking/: __init__.py  apply_window.py  benchmark.py  eligibility.py  guardrails.py  score.py  targeting.py
resume/: README.md  resume.txt  resume_profile.md  resume_profile.py
scripts/: generate_release_manifest.py  install.ps1  install.sh  smoke_installed.py
tests/: asgi_client.py  conftest.py  test_adapter_freshness.py  test_agent_cli_surface.py  test_apply_window.py  test_approved_profile_enforcement.py  test_config_cache.py  test_dashboard_api.py  test_dashboard_db.py  test_data_lifecycle.py  test_data_paths.py  test_discovery_funnel.py  test_discovery_pool.py  test_guardrails.py  test_job_catalog.py  test_job_description.py  test_link_and_demo_quality.py  test_links_backfill.py  test_location_normalization.py  test_migrations.py  test_onboarding.py  test_profiles.py  (+28 more)
(+25 files in other folders)
