[project]
name = "opportune"
version = "0.1.1"
description = "A local-first job search assistant that finds, ranks, and tracks opportunities around your approved profile"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Raghuram Reddy" }]
keywords = [
    "job-search",
    "job-discovery",
    "job-ranking",
    "job-tracker",
    "local-first",
    "privacy",
    "fastapi",
    "react",
    "sqlite",
    "resume-parser",
    "agent-friendly",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "urllib3>=2.2,<3",
    "beautifulsoup4>=4.12,<5",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0.3,<7",
    "fastapi>=0.139.0,<1",
    "pydantic>=2.10,<3",
    "starlette>=1.3.1,<2",
    "uvicorn>=0.51.0,<1",
    # Loaded dynamically by FastAPI for multipart resume uploads.
    "python-multipart>=0.0.20,<1",
    "pymupdf>=1.26,<2",
    "python-docx>=1.2,<2",
]

[project.urls]
Homepage = "https://github.com/RaghuramReddy9/opportune"
Documentation = "https://github.com/RaghuramReddy9/opportune#readme"
Issues = "https://github.com/RaghuramReddy9/opportune/issues"
Source = "https://github.com/RaghuramReddy9/opportune"

[project.optional-dependencies]
apify = ["apify-client>=1.8,<3"]

[project.scripts]
opp = "jobhunt:main"
opportune = "jobhunt:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
py-modules = ["config", "desktop_launcher", "jobhunt", "pilot_metrics", "profile_context", "public_ops"]
[tool.setuptools.packages.find]
include = [
    "adapters*",
    "benchmarks*",
    "core*",
    "dashboard*",
    "dashapi*",
    "onboarding*",
    "pipeline*",
    "ranking*",
    "resume*",
]

[tool.setuptools.data-files]
"." = ["config.example.yaml", "source_registry.yaml"]
"data" = ["data/skill_taxonomy.yaml"]
"profile" = ["profile/availability.yaml", "profile/skills.example.yaml"]
"frontend/dist" = ["frontend/dist/index.html", "frontend/dist/favicon.svg", "frontend/dist/icons.svg"]
"frontend/dist/assets" = ["frontend/dist/assets/*.css", "frontend/dist/assets/*.js"]

[tool.setuptools.package-data]
ranking = ["fixtures/*.json"]

[dependency-groups]
dev = [
    "httpx2>=2.5,<3",
    "pytest>=9.1.1,<10",
    "ruff>=0.15,<1",
    "tomli>=2.0,<3; python_version < '3.11'",
]
